--- a/app/src/main/res/layout/grid_users_list.xml
+++ b/app/src/main/res/layout/grid_users_list.xml
@@ -23,94 +23,61 @@
         android:layout_margin="10dp"
         app:cardElevation="8dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:onClick="@{() -> clickListener.onClick(data)}"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> clickListener.onClick(data)}">
 
             <ImageView
-                android:layout_width="78dp"
-                android:layout_height="78dp"
-                android:scaleType="centerCrop"
                 android:id="@+id/image"
                 app:imageUrl="@{data.avatar}"
-                app:srcCompat="@drawable/ic_avatar_40dp"/>
+                app:srcCompat="@drawable/ic_avatar_40dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:adjustViewBounds="true"
+                app:layout_constraintBottom_toTopOf="@+id/text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.74" />
 
             <TextView
                 android:id="@+id/text"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
+                android:layout_gravity="top|start"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
                 android:text="@{data.username}"
-                android:textSize="21dp"
-                android:layout_marginLeft="14dp"
-                android:layout_marginRight="10dp"/>
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/subtitle_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image"
+                tools:text="Some date" />
 
             <TextView
                 android:id="@+id/subtitle_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:text="@{data.country}"
-                android:textSize="18dp"
-                android:layout_marginLeft="14dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"/>
-
-        </LinearLayout>
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="@{() -> clickListener.onClick(data)}">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="12dp"
-            android:padding="4dp"
-            app:imageUrl="@{data.avatar}"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_avatar_40dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text" />
 
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="16dp"
-            android:text="@{data.username}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#DE000000"
-            app:layout_constraintTop_toTopOf="@+id/image"
-            app:layout_constraintStart_toEndOf="@+id/image"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Hello"/>
-
-        <TextView
-            android:id="@+id/subtitle_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="4dp"
-            android:text="@{data.country}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#8A000000"
-            app:layout_constraintStart_toEndOf="@+id/image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/image"
-            tools:text="CN"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
   </androidx.cardview.widget.CardView>
 
