--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,15 +22,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:background="@drawable/gradientbackground"
+
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center_horizontal"
                 imageUrl="@{viewModel.rqstUserDetails.avatar}"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="45dp"
                 android:src="@drawable/ic_avatar_40dp" />
 
@@ -41,10 +41,10 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:text="@{viewModel.rqstUserDetails.username}"
-                tools:text="Name"
-                android:textColor="#fff"
+                android:textColor="#1C1A1A"
                 android:textSize="21sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Name" />
         </LinearLayout>
     </RelativeLayout>
 
