--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -25,6 +25,7 @@
         <argument
             android:name="userId"
             app:argType="integer" />
+            <!--  pass data to fragment      -->
     </fragment>
 
 </navigation>
